# minecraft-server-manager

./: Cargo.toml  Dockerfile  LICENSE  README.md  api.yaml  build-api.sh  start_mc_server.sh
.github/workflows/: ci.yml
api/: Cargo.toml  README.md
api/config/: .gitignore  aws.template.json
api/src/: config.rs  ec2.rs  main.rs  server_starter.rs  server_status.rs  server_stopper.rs  types.rs
client/: Cargo.toml
client/config/: server.template.json
client/src/: config.rs  main.rs  server.rs
config/: aws.template.json
src/: config.rs  main.rs  server.rs  server_status.rs  server_stopper.rs
