[package]
name = "api"
version = "0.1.0"
authors = ["wancup <62416191+wancap@users.noreply.github.com>"]
edition = "2018"

[dependencies]
lambda_http = "0.1.1"
lambda_runtime = "0.2.1"
serde = "1.0.105"
serde_json = "1.0.49"
rusoto_core = {version = "0.43.0",  default_features = false, features=["rustls"]}
rusoto_ec2 = {version = "0.43.0", default_features = false, features=["rustls"]}
tokio = "0.2.13"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
