[package]
name = "api"
version = "0.1.0"
authors = ["wancup <62416191+wancap@users.noreply.github.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
aws-config = "0.8.0"
aws-sdk-ec2 = "0.8.0"
lambda_http = "0.5.0"
lambda_runtime = "0.5.0"
serde = "1.0.105"
serde_json = "1.0.49"
tokio = "1.17.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
