[package]
name = "client"
version = "0.1.1"
authors = ["wancup <62416191+wancup@users.noreply.github.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
clipboard = "0.5.0"
iced = { version = "0.3", features = ["tokio"] }
serde = {version = "1.0.106", features = ["derive"]}
serde_json = "1.0.51"
reqwest = { version = "0.10", features = ["json"] }
